fix: start screen button no longer stretches full width

--- a/src/styles/screens/start.scss
+++ b/src/styles/screens/start.scss
@@ -22,6 +22,11 @@
     margin-bottom: $spacing-lg;
   }
 
+  .btn {
+    align-self: flex-start;
+    width: auto;
+  }
+
   &__decoration {
     position: absolute;
     bottom: -3rem;
